--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -25,7 +25,7 @@ main section.categories-show {
         border: 1px solid rgba(224, 14, 14, 0.8);
         border-radius: 0.25em;
         color: white;
-        padding: 0.375rem 0.75rem;
+        padding: 0.375rem 0.75em;
         font-size: 1rem;
         border-radius: 0.25rem;
       }
